個別ページ追加

--- a/app/stylesheets/main.sass
+++ b/app/stylesheets/main.sass
@@ -7,10 +7,21 @@ body
 .logo
   :text-align center
   :font-size 64px
+  :font-family Arial, Helvetica, sans-serif
   :margin-top 50px
   :margin-bottom 50px
   :font-variant small-caps
 
-
 .credits
   :text-align center
+
+.page
+  :padding 10px
+  :-moz-border-radius 5px 5px 5px 5px
+  :-webkit-border-radius 5px 5px 5px 5px
+  :-moz-box-shadow 1px 1px 2px #999
+  :-webkit-box-shadow 1px 1px 2px #999
+  :border 1px solid #999
+
+.main
+  :padding-top 20px
