--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -11,10 +11,10 @@
     .topbar
       .fill
         .container
-          %a.brand Quote It
+          %a.brand{:href=>'/'} Quote It
           %ul.nav
             %li
-              %a Home
+              %a{:href=>'/'} Home
             %li
               %a About
     .container
