サービス一覧追加 refs #823

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -16,6 +16,8 @@
             %li
               %a{:href=>'/'} Home
             %li
+              =link_to 'Support services', url_for(:services)
+            %li
               %a About
     .container
       .main.row
