トップページにサービスリストを記載 refs #823

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -16,7 +16,7 @@
             %li
               %a{:href=>'/'} Home
             %li
-              =link_to 'Support services', url_for(:services)
+              =link_to 'Supported services', url_for(:services)
             %li
               %a About
     .container
