--- a/app/views/main/index.haml
+++ b/app/views/main/index.haml
@@ -5,4 +5,17 @@
       %input.span8.xlarge{:placeholder => 'URL for quote', :name => 'u'}
       %input.span2.btn.primary{:type => :submit, :value => 'Quote It' }
 
-
+%h2 About <span class="brand">QuoteIt</span>
+%div.span5
+  %h3 Feature
+  %p <span class="brand">QutoteIt</span> provides API to get the thumbnail image and the summary of a URL. This reduce a boiler plate code from some URL expanding plugin(e.g. wiki macro, grease monkey, and others).
+%div.span5
+  %h3 Support service
+  %ul
+    %li=link_to('Twitter','http://twitter.com')
+    %li=link_to('Twitpic','http://twitpic.com')
+    %li=link_to('yfrog','http://yfrog.com')
+    %li=link_to('YouTube','http://youtube.com')
+    %li=link_to('NicoVideo','http://www.nicovideo.jp')
+    %li ... and more
+  %p="You could see a full-list at #{link_to('supported services', url_for(:services))} page."
