--- a/app/views/main/show.haml
+++ b/app/views/main/show.haml
@@ -13,22 +13,22 @@
       unavailable
     %h3 HTML Source
     %textarea.span7.xlarge{:rows=>3}=@page
-
-%h2 API
+.page-header
+  %h2 API
 %h3 Thumbnail
 %dl
   %dt Get JSON
-  %dd=url_link(@root + url_for(:page, :thumbnail, :u => @url, :format => :json))
+  %dd=url_link(url_for(:page, :thumbnail, :u => @url, :format => :json))
   %dt Get Plain text
-  %dd=url_link(@root + url_for(:page, :thumbnail, :u => @url, :format => :txt))
+  %dd=url_link(url_for(:page, :thumbnail, :u => @url, :format => :txt))
   %dt Redirect thumbnail image
-  %dd=url_link(@root + url_for(:page, :thumbnail, :u => @url, :format => :jpg))
+  %dd=url_link(url_for(:page, :thumbnail, :u => @url, :format => :jpg))
 %h3 Content
 %dl
   %dt Get JSON
-  %dd=url_link(@root + url_for(:page, :html, :u => @url, :format => :json))
+  %dd=url_link(url_for(:page, :html, :u => @url, :format => :json))
   %dt Get HTML
-  %dd=url_link(@root + url_for(:page, :html, :u => @url, :format => :html))
+  %dd=url_link(url_for(:page, :html, :u => @url, :format => :html))
 
 
 
