Bootstrapにあわせて、フッターには<footer>を使うようにした refs #826

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -22,8 +22,8 @@
     .container
       .main.row
         =yield
-      .credits
-        %p="Copyright (C) 2011 <a href='http://codefirst.org'>codefirst.org</a>. All rights reserved."
+    %footer.credits
+      %p="Copyright (C) 2011 <a href='http://codefirst.org'>codefirst.org</a>. All rights reserved."
 
 
 
