add favicon from http://www.iconfinder.com/icondetails/61972/43/clip_icon refs #828

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -6,6 +6,7 @@
     %meta{:name => "content-script-type", :content => "text/javascript"}
     = stylesheet_link_tag 'bootstrap'
     = stylesheet_link_tag 'main'
+    = favicon_tag 'favicon.png'
     %title Quote It - quote webpage contents
   %body
     .topbar
