--- a/app/stylesheets/main.sass
+++ b/app/stylesheets/main.sass
@@ -25,3 +25,19 @@ body
 
 .main
   :padding-top 20px
+
+.CodeMirror
+  :background-color #fff
+  :border 1px solid #CCC
+  :border-radius 3px
+  :-webkit-border-radius 3px
+  :-moz-border-radius 3px
+  :margin-bottom 10px
+
+.result
+  :min-height 200px
+  :border-radius 3px
+  :-webkit-border-radius 3px
+  :-moz-border-radius 3px
+  :border 1px solid #CCC
+  :padding 10px
