--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -4,10 +4,13 @@
     %meta{'http-equiv'=>'content', :content=>'text/thml; charset=utf-8'}
     %meta{:name => "content-style-type", :content => "text/css"}
     %meta{:name => "content-script-type", :content => "text/javascript"}
-    = stylesheet_link_tag 'bootstrap'
-    = stylesheet_link_tag 'main'
+    = stylesheet_link_tag 'bootstrap.min', 'codemirror', 'codemirror/theme/default', 'main'
+    = yield_content :include
     = favicon_tag 'favicon.png'
-    %title Quote It - quote webpage contents
+    - if @title
+      %title="#{@title} - Quote It"
+    - else
+      %title Quote It - quote webpage contents
   %body
     .topbar
       .fill
@@ -17,9 +20,11 @@
             %li
               %a{:href=>'/'} Home
             %li
-              =link_to 'Services', url_for(:services)
+              =link_to 'Plugins', url_for(:services)
             %li
-              =link_to 'Plugins', url_for(:wedata_index)
+              =link_to 'Upgrade', url_for(:wedata_index)
+            %li
+              =link_to 'Sandbox', url_for(:sandbox_index)
             %li
               %a About
     .container
@@ -30,7 +35,3 @@
         =yield
     %footer.credits
       %p="Copyright (C) 2011 <a href='http://codefirst.org'>codefirst.org</a>. All rights reserved."
-
-
-
-
