githubのレポジトリ情報を追加 refs #840

--- a/app/views/main/about.haml
+++ b/app/views/main/about.haml
@@ -12,7 +12,7 @@
   %li Register the plugin to <a href='#{WEDATA_THUMBNAIL}'>QuoteIt-thumbnail DB</a> or <a href='#{WEDATA_CLIP}'>QuoteIt-clip DB</a>.
   %li Upgarde <span class="brand">QuoteIt</a> at <a href="#{url_for :wedata_index}">Upgrade</a>.
 %h2 Fork on Github
-%p Download, fork, pull, file issues, and more with
+%p Download, fork, pull, file issues, and more with <a href="https://github.com/codefirst/quoteit">Github repo</a>.
 %h2 Author
 %ul
   %li
