aboutページへのリンク追加 refs #840

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -26,7 +26,7 @@
             %li
               =link_to 'Sandbox', url_for(:sandbox_index)
             %li
-              %a About
+              =link_to 'About', url_for(:about)
     .container
       .main.row
         - if flash[:notice]
