add original_url/clip_url refs #858

--- a/app/views/sandbox/index.haml
+++ b/app/views/sandbox/index.haml
@@ -43,6 +43,8 @@
           %ul
             %li <code>content</code>: content of clip URL
             %li <code>json</code>: parse result of <code>content</code>
+            %li <code>original_url</code>: original URL
+            %li <code>clip_url</code>: clip URL
 
   %h2 Plugin test
   .plugin-test
