add document link refs #862

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -26,6 +26,8 @@
             %li
               =link_to 'Sandbox', url_for(:sandbox_index)
             %li
+              =link_to 'Docs(ja)', 'http://readthedocs.org/docs/quoteit/en/latest/'
+            %li
               =link_to 'About', url_for(:about)
     .container
       .main.row
