migrate top page

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,7 +4,7 @@
     %meta(charset="utf-8")
     %meta(http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1")
     %meta(name="viewport" content="width=device-width, initial-scale=1.0")
-    %title= content_for?(:title) ? yield(:title) : "Quoteit"
+    %title= content_for?(:title) ? yield(:title) : "Quote It"
     = csrf_meta_tags
     / Le HTML5 shim, for IE6-8 support of HTML elements
     /[if lt IE 9]
@@ -19,7 +19,7 @@
 
 
   %body
-    .navbar.navbar-fixed-top
+    .navbar.navbar-fixed-top.navbar-inverse
       .navbar-inner
         .container
           %a.btn.btn-navbar(data-target=".nav-collapse" data-toggle="collapse")
@@ -29,24 +29,14 @@
           %a.brand(href="#") Quoteit
           .container.nav-collapse
             %ul.nav
-              %li= link_to "Link 1", "/path1"
-              %li= link_to "Link 2", "/path2"
-              %li= link_to "Link 3", "/path3"
+              %li= link_to "Home", root_path
+              %li= link_to "Supported services", "/path2"
+              %li= link_to "Sandbox", "/path3"
+              %li= link_to "Docs(ja)", "/path3"
 
     .container
+      = bootstrap_flash
+      = yield
 
-      .row
-        .span9
-          = bootstrap_flash
-          = yield
-        .span3
-          .well.sidebar-nav
-            %h3 Sidebar
-            %ul.nav.nav-list
-              %li.nav-header Sidebar
-              %li= link_to "Link 1", "/path1"
-              %li= link_to "Link 2", "/path2"
-              %li= link_to "Link 3", "/path3"
-    
       %footer
-        %p &copy; Company 2013
+        %p Copyright &copy; 2013 <a href="http://www.codefirst.org/">codefirst.org</a>. All rights reserved.
