--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -1,3 +1,16 @@
 body {
   padding: 80px;
 }
+
+.brand {
+  font-variant: small-caps;
+}
+
+.logo {
+  font-family: Arial,Helvetica,sans-serif;
+  font-size: 64px;
+  margin-bottom: 50px;
+  margin-top: 50px;
+  text-align: center;
+}
+
