Add supported services page

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -30,7 +30,7 @@
           .container.nav-collapse
             %ul.nav
               %li= link_to "Home", root_path
-              %li= link_to "Supported services", "/path2"
+              %li= link_to "Supported services", plugins_path
               %li= link_to "Sandbox", "/path3"
               %li= link_to "Docs(ja)", "/path3"
 
