--- a/app/views/top/index.html.haml
+++ b/app/views/top/index.html.haml
@@ -22,7 +22,8 @@
     %h3 Example
     %dl
       %dt Get thumbnail from <a href='http://twitpic.com/73wiod'>http://twitpic.com/73wiod</a>
-      %dd xxx
+      %dd=url_link(show_path(u: 'http://twitpic.com/73wiod'))
       %dt Get clip from <a href='https://twitter.com/#!/twitter/status/91890490089275392'>https://twitter.com/#!/twitter/status/91890490089275392</a>
-      %dd xxx
+      %dd=url_link(show_path(u: 'https://twitter.com/#!/twitter/status/91890490089275392'))
+
 
