add link to QuoteIt logo

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -26,7 +26,7 @@
             %span.icon-bar
             %span.icon-bar
             %span.icon-bar
-          %a.brand(href="#") Quoteit
+          %a.brand(href=root_path) Quoteit
           .container.nav-collapse
             %ul.nav
               %li= link_to "Home", root_path
