add sandbox page

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -31,6 +31,7 @@
             %ul.nav
               %li= link_to "Home", root_path
               %li= link_to "Supported services", plugins_path
+              %li= link_to "Sandbox", sandbox_path
 
     .container
       = bootstrap_flash
