Fixed: submitting form fails by sandbox.js refs #17

--- a/app/views/sandbox/index.html.haml
+++ b/app/views/sandbox/index.html.haml
@@ -3,7 +3,7 @@
 
 %h2 Sandbox
 
-%form.plugin-definition.form-horizontal
+%form.plugin-definition.form-horizontal.sandbox-form
   %h3 Plugin definition
   .control-group
     %label.control-label Plugin type
